--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                 }
 
                 function checkSTAN() {
+                    // STAN itu semua masuk
                     let result = true;
                     return result;
                 }
