--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                         {checkIPDN() ? <ListItem title="IPDN" page="cek-ipdn" /> : ""}
                         {checkSTAN() ? <ListItem title="STAN" page="cek-stan" /> : ""}
                         {checkPoltekipPoltekim() ? <ListItem title="POLTEKIP/POLTEKIM" page="cek-poltekip-poltekim" /> : ""}
-                        {checkSSN() ? <ListItem title="POLTEK SSN" page="cek-ssn" /> : ""}
+                        {checkSSN() ? <ListItem title="POLTEK SSN" page="cek-poltek-ssn" /> : ""}
                         {checkKemenhub() ? <ListItem title="SEKDIN KEMENHUB" page="cek-kemenhub" /> : ""}
                         {checkSTIS() ? <ListItem title="POLSTAT STIS" page="cek-polstat-stis" /> : ""}
                         {checkkSTMKG() ? <ListItem title="STMKG" page="cek-stmkg" /> : ""}
