tebak karakter buta warna

--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
                 { image: "4", answer: "9" },
                 { image: "5", answer: "62" },
                 { image: "6", answer: "98" },
+                { image: "7", answer: "3" },
+                { image: "8", answer: "2" },
+                { image: "9", answer: "60" },
+                { image: "10", answer: "2" },
+                { image: "11", answer: "4" },
             ]);
 
             const [results, setResults] = React.useState([]);
