--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <button onClick={() => props.showPage("kemenhub")}>Cek Kemenhub</button>
                         <button onClick={() => props.showPage("stmkg")}>Cek STMKG</button>
                         <button onClick={() => props.showPage("stis")}>Cek STIS</button>
-                        <button onClick={() => props.showPage("poltekip-poltekim")}>Cek STIN</button>
+                        <button onClick={() => props.showPage("stin")}>Cek STIN</button>
                     </div>
 
                     <Partials.ButtonGroup Button1={() => <Button1 />} Button2={() => <Button2 />} />
