Menghapus informasi pada halaman ssn, kemenhub, stmkg, dan stin

--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                 return (
                     <React.Fragment>
                         <Pages.Informasi.Partials.Header title="STMKG" />
-                        <p>STMKG ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 7 dari yang lainnya. </p>
+                        <p>STMKG ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi</p>
                         <p>Tingkat persentase kelolosan pada seleksi 2023 yaitu sebesar 2.15 % dan jumlah yang daftar adalah 51.136</p>
 
                         <Pages.Informasi.Partials.Footer showPage={props.showPage} tingkatPersaingan="1:46" persainganMasuk="STAN" />
@@ -998,8 +998,7 @@
                 return (
                     <React.Fragment>
                         <Pages.Informasi.Partials.Header title="SSN" />
-                        <p>SSN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 4 dari yang lainnya. </p>
-                        <p>Tingkat persentase kelolosan pada seleksi 2023 yaitu sebesar 1.75 % dan jumlah yang daftar adalah 17.142</p>
+                        <p>SSN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi </p>
 
                         <Pages.Informasi.Partials.Footer showPage={props.showPage} tingkatPersaingan="1:57" persainganMasuk="SSN" />
                         <Partials.ButtonGroup Button1={() => <Pages.Informasi.Partials.TombolKembali page={"cek-poltek-ssn"} showPage={props.showPage} />} />
@@ -1011,8 +1010,7 @@
                 return (
                     <React.Fragment>
                         <Pages.Informasi.Partials.Header title="Kemenhub" />
-                        <p>Kemenhub ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 4 dari yang lainnya. </p>
-                        <p>Tingkat persentase kelolosan pada seleksi 2023 yaitu sebesar 1.75 % dan jumlah yang daftar adalah 17.142</p>
+                        <p>Kemenhub ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi </p>
 
                         <Pages.Informasi.Partials.Footer showPage={props.showPage} tingkatPersaingan="1:57" persainganMasuk="Kemenhub" />
                         <Partials.ButtonGroup Button1={() => <Pages.Informasi.Partials.TombolKembali page={"cek-kemenhub"} showPage={props.showPage} />} />
@@ -1037,8 +1035,7 @@
                 return (
                     <React.Fragment>
                         <Pages.Informasi.Partials.Header title="STIN" />
-                        <p>STIN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 5 dari yang lainnya. </p>
-                        <p>Tingkat persentase kelolosan pada seleksi 2023 yaitu sebesar 2.01 % dan jumlah yang daftar adalah 24.913</p>
+                        <p>STIN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi</p>
 
                         <Pages.Informasi.Partials.Footer showPage={props.showPage} tingkatPersaingan="1:49" persainganMasuk="STIN" />
                         <Partials.ButtonGroup Button1={() => <Pages.Informasi.Partials.TombolKembali page={"cek-stin"} showPage={props.showPage} />} />
