--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
                 { image: "9", answer: "60" },
                 { image: "10", answer: "2" },
                 { image: "11", answer: "4" },
+                { image: "12", answer: "8" },
+                { image: "13", answer: "3" },
+                { image: "14", answer: "5" },
+                { image: "15", answer: "1" },
+                { image: "16", answer: "9" },
+                { image: "17", answer: "6" },
+                { image: "18", answer: "15" },
+                { image: "19", answer: "3" },
+                { image: "20", answer: "0" },
             ]);
 
             const [results, setResults] = React.useState([]);
