Merubah dari bahasa inggris ke indonesia

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                     className="btn btn-primary mt-2"
                                     onClick={handleSubmit}
                                 >
-                                    Ok
+                                    Lanjutkan
                                 </button>
                             </div>
                         ) : (
@@ -221,11 +221,11 @@
                                 <table className="table">
                                     <thead>
                                         <tr>
-                                            <th>Question</th>
-                                            <th>Image</th>
-                                            <th>Correct Answer</th>
-                                            <th>Your Answer</th>
-                                            <th>Result</th>
+                                            <th>Pertanyaan</th>
+                                            <th>Gambar</th>
+                                            <th>Jawaban Benar</th>
+                                            <th>Jawabanmu</th>
+                                            <th>Hasil</th>
                                         </tr>
                                     </thead>
                                     <tbody>
