--- a/index.html
+++ b/index.html
@@ -950,15 +950,27 @@
                                     <li className="list-group-item">Maka dari itu, jika Anda adalah orang yang bekerja keras, fisik cukup bagus, nilai diatas rata - rata. Sekolah Kedinasan Poltekim adalah pilihan yang tepat</li>
                                     <li className="list-group-item">Rekomendasi untuk bimbel Panara Course adalah paket yang </li>
                                     <li className="list-group-item">Mengingat persaingan masuk <b>{persainganMasuk ? persainganMasuk : "KOSONG"}</b> sangat ketat, maka perlu sangat intensive belajar SKD dan Psikologi di Program VIP Offline</li>
-                                    <li className="list-group-item">Cek fasilitas bimbingan belajar jika kalian memilih</li>
-                                    <li className="list-group-item">Apabila ingin bergabung pada paket di atas atau melihat perbandingannya dengan paket bimbel lainnya</li>
+                                    <li className="list-group-item">
+                                        <span>Cek fasilitas bimbingan belajar jika kalian memilih</span>
+                                        <a href="https://panara.id" class="btn btn-secondary">Program VIP Online</a>
+                                        </li>
+                                    <li className="list-group-item">
+                                        <span>Apabila ingin bergabung pada paket di atas atau melihat perbandingannya dengan paket bimbel lainnya</span>
+                                        <a href="https://panara.id" class="btn btn-info">https://panara.id</a>
+                                    </li>
                                 </ul>
                             </div>
 
                             <div className="alert alert-secondary" role="alert">
                                 <ul className="list-group">
-                                    <li className="list-group-item">Untuk informasi lebih lanjut mengenai bimbingan belajar tersebut dapat mengunjungi laman website berikut ini</li>
-                                    <li className="list-group-item">Anda juga dapat berkonsultasi dengan admin kami melalui kontak berikut ini</li>
+                                    <li className="list-group-item">
+                                        <span>Untuk informasi lebih lanjut mengenai bimbingan belajar tersebut dapat mengunjungi laman website berikut ini</span>
+                                        <a href="https://panara.id" class="btn btn-success">Klik Disini</a>
+                                    </li>
+                                    <li className="list-group-item">
+                                        <span>Anda juga dapat berkonsultasi dengan admin kami melalui kontak berikut ini</span>
+                                        <a href="https://api.whatsapp.com/send?phone=6289668538522" class="btn btn-success">0896-6853-8522</a>
+                                    </li>
                                 </ul>
                             </div>
                         </React.Fragment>
