Menambahkan teks header di tebak karakter buta warna

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <hr />
                         <div className="card p-2 text-center mb-2">
                             <ul>
-                                <li>Terdiri dari 5 pertanyaan berurutan yang diacak (tiap kali refresh)</li>
+                                <li>Terdiri dari 5 pertanyaan berurutan yang diacak (tiap kali refresh / pindah halaman)</li>
                                 <li>Hasil akan tampil setelah menjawab 5 pertanyaan</li>
                             </ul>
                         </div>
