Typo redirect dari Hasil yang seharusnya ke Home malahan saya tulis cek kedinasan

--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
                                     </div>
 
                                     <div className="col-sm-4">
-                                        <b>Cek perbandingan tingkat persaingan masuk Sekolah Kedinasan <button onClick={() => props.showPage("cek-kedinasan-sekolah")} className="btn btn-primary">Disini</button></b>
+                                        <b>Cek perbandingan tingkat persaingan masuk Sekolah Kedinasan <button onClick={() => props.showPage("home")} className="btn btn-primary">Disini</button></b>
                                     </div>
                                 </div>
                             </div>
