--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
                 ]
 
                 function Button2() {
-                    return <button onClick={() => props.showPage("poltekim")} className="btn btn-primary">Poltekim</button>
+                    return <button onClick={() => props.showPage("stin")} className="btn btn-primary">Poltekim</button>
                 }
 
                 return (
